[gd_scene load_steps=4 format=3 uid="uid://dbqo5xmunr5w4"]

[ext_resource type="Script" path="res://new_src/main_menu/main_menu.gd" id="1_501wg"]
[ext_resource type="Texture2D" uid="uid://ceuc0auu18vvm" path="res://assets/main/main_menu/main_menu_bg.png" id="1_kdbxd"]
[ext_resource type="AudioStream" uid="uid://gesgp1j0mx6f" path="res://assets/main/music/Legend of the Fabled Night.mp3" id="3_gg6hp"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_501wg")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kdbxd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 0.388235)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -153.0
offset_right = 61.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
text = "IDLE RPG GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="new_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "NEW GAME"

[node name="continue_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT GAME"

[node name="new_character_menu" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="new_character_menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 420.0
grow_vertical = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Label" type="Label" parent="new_character_menu/VBoxContainer"]
layout_mode = 2
text = "Edit your name:"

[node name="name_edit" type="LineEdit" parent="new_character_menu/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="new_character_menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 74

[node name="start_game" type="Button" parent="new_character_menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Start Game"

[node name="exit" type="Button" parent="new_character_menu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Nevermind"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gg6hp")
volume_db = -15.0
autoplay = true

[connection signal="button_up" from="VBoxContainer/new_game" to="." method="new_game"]
[connection signal="button_up" from="VBoxContainer/continue_game" to="." method="continue_game"]
[connection signal="button_up" from="VBoxContainer/quit" to="." method="quit"]
[connection signal="text_changed" from="new_character_menu/VBoxContainer/name_edit" to="." method="_on_name_edit_text_changed"]
[connection signal="button_up" from="new_character_menu/VBoxContainer/HBoxContainer/start_game" to="." method="_on_start_game_button_up"]
[connection signal="button_up" from="new_character_menu/VBoxContainer/HBoxContainer/exit" to="." method="_on_exit_button_up"]
